# sbgEComAnalyzer

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: main.yml
code/: CMakeLists.txt
code/cli/: CMakeLists.txt
code/cli/src/: main.cpp
code/core/: CMakeLists.txt
code/core/src/data/: sessionInfo.cpp  sessionInfo.h
code/core/src/ecom/: fileParser.cpp  fileParser.h  fileParser_p.h  libraryInfo.cpp  libraryInfo.h
code/gui/: CMakeLists.txt
code/gui/qml/: main.qml
code/gui/src/: main.cpp
code/tests/: CMakeLists.txt
code/tests/src/data/: sessionInfoTests.cpp
code/tests/src/ecom/: fileParserTests.cpp  libraryInfoTests.cpp
